--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Marty Martin's Portfolio</h1>
+    <h1>Marty's Portfolio</h1>
         <h2>I'm a nerd</h2>
         <hr>
 
